Bugs squashed

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@ a {
     .Links {
       height: 3.5rem;
       display: flex;
-      justify-content: right;
+      justify-content: flex-end;
       flex: 1 0 auto;
       align-items: center;
       a img {
@@ -99,26 +99,30 @@ a {
   div {
     display: flex;
     justify-content: center;
-    flex: 1 1 auto;
+    flex: 1 0 auto;
   }
 }
 
 .navMenu {
-  height: 100%;
-  background-color: black;
-  width: 50%;
-  margin: 0;
-  transform: translateX(calc(-0.5rem - 0.25rem));
+  flex: 1 0 auto;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  opacity: 1;
-  a {
-    margin-left: 1.25rem;
+  color: white;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  * {
+    margin: 0;
+    padding: 0;
+    margin: 0.5rem;
+    margin-left: 0.75rem;
+    padding: 0.5rem;
   }
+  background-color: black;
 }
 .backdrop {
-  position: absolute;
+  position: fixed;
   z-index: 99;
   height: 100vh;
   background-color: #000000e1;
@@ -169,22 +173,38 @@ a {
     flex: 2 0 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    .projectMobileTitle {
+      align-items: flex-start;
+      margin: 0;
+      padding: 0;
+      div {
+        margin: 0;
+        padding: 0;
+      }
+    }
+    .desc {
+      text-align: justify;
+    }
     div {
       display: flex;
       flex-direction: column;
-      text-align: justify;
+
+      a h1 {
+        text-align: left;
+        margin: 0;
+      }
       div {
         flex: 1 0 auto;
         display: flex;
         align-items: center;
         button {
-          width: 40%;
+          width: 50%;
           font-size: 1.25rem;
           padding: 0.1rem;
           border-radius: 4px;
           background-color: white;
+          color: #2a2c2b;
+          text-align: center;
         }
       }
     }
@@ -206,7 +226,7 @@ a {
 
 .footer {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   font-size: 0.5rem;
   a {
     color: white;
@@ -316,5 +336,8 @@ button {
 
   .navMenuContainer {
     margin: 0.5em;
+    button span {
+      color: #2a2c2b;
+    }
   }
 }
